fix wrapping on code in mobile view

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -71,6 +71,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  max-width: 100vw;
 }
 
 //
